Nuevo: Clase System.Threading.Reporters.ConsoleReporter
Mejorado: Significativa expansión de ITaskReporter
Cambiado: refactorización y renombrado de multiples propiedades de BarStepper
Algunas nuevas funciones, atributos, argumentos de eventos, excepciones y recursos misceláneos, además una profunda limpieza de archivos innecesarios

MCART 0.5.0.0
Nuevo: Soporte preeliminar para campos llave secundarios, campos de autoincremento y campos automáticos para MCADB.
Nuevo: Para desarrolladores, existen nuevas opciones de carga de bases de datos de MCADB para realizar tareas de depuración.
Nuevo: Nuevas funciones de administración de objetos: GetTypes(Of T)(AppDomain), ToTypes(Object()), NewInstance(Of T)(Type, Object())
Nuevo: Funciones PackString(String, IO.Stream), UnpackString(IO.Stream), IsEither(Object, Object()), IsNeither(Object, Object())
Mejorado: las bases de datos de MCADB utilizan el GUID de la aplicación en lugar del nombre del ensamblado.
Cambiado: Todos los controles y formularios ahora se encuentran contenidos dentro de su propio Namespace.
Cambiado: Más movimientos de código de ejemplo a un módulo de ejemplos independiente. Los archivos fuente de MCART son más pequeños.
Arreglado: Error de XML de compilación de documentación
Misc.: Uso de características de VB15
Otras mejoras y correcciones varias.

MCART 0.6 Series
- Todo el código se ha mudado a C# 7.0 desde VB15
- Se ha adoptado la licencia GNU GPL3
- Todos los módulos han sido reorganizados
Nuevo: El proyecto ahora es multiplataforma
Nuevo: Soporte para Mono Runtime
Nuevo: Soporte para .Net Standard (Core 2.0)
Nuevo: Soporte para Linux/macOs por medio de Mono Runtime
Nuevo: Librería de UI en gtk (incluye widgets y ventanas)
Nuevo: Librería de UI en Windows Forms (incluye controles y formularios)
Nuevo: Librería de UI en WPF (incluye controles y ventanas)
Nuevo: Proyectos de Unit Testing compatibles con Visual Studio
Mejorado: Reescritura total de MCART
Quitado: MCADB