@@ -1,0 +1,37 @@
+﻿<?xml version="1.0" encoding="utf-8"?>
+<topic id="1d355a2c-6ff6-4108-9310-510c361b6304" revisionNumber="1">
+  <developerConceptualDocument xmlns="http://ddue.schemas.microsoft.com/authoring/2003/5" xmlns:xlink="http://www.w3.org/1999/xlink">
+    <introduction>
+      <para>
+        MCART 0.7 tuvo su último Milestone (0.7.0.0) el domingo, 24 de diciembre de 2017.
+      </para>
+    </introduction>
+    <section>
+      <title>Notas generales</title>
+      <content>
+        <list class="bullet">
+          <listItem>
+            <para>
+              MCART ha cambiado sus implementaciones para respetar los principios de SOLID.
+            </para>
+          </listItem>
+        </list>
+      </content>
+    </section>
+    <section>
+      <title>Cambios en esta versión</title>
+      <content>
+        <list class="nobullet">
+          <listItem>
+            <para>
+              Mejorado: Soporte de plugins parcialmente rescrito.
+            </para>
+          </listItem>
+        </list>
+      </content>
+    </section>
+    <relatedTopics>
+      <link xlink:href="a43a94b2-1336-49d7-b56e-160b8ed4dd09" />
+    </relatedTopics>
+  </developerConceptualDocument>
+</topic>
