@@ -1,67 +1,0 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
-<topic id="abd75eaf-ae61-45b9-b102-44038f014ca1" revisionNumber="1">
-  <developerConceptualDocument xmlns="http://ddue.schemas.microsoft.com/authoring/2003/5" xmlns:xlink="http://www.w3.org/1999/xlink">
-    <introduction>
-      <para>MCART 0.6.1.0 fue completado el jueves, 21 de diciembre de 2017.</para>
-    </introduction>
-    <section>
-      <title>Notas generales</title>
-      <content>
-        <list class="bullet">
-          <listItem>
-            <para>Todo el código se ha mudado a C# 7.1 desde VB15</para>
-          </listItem>
-          <listItem>
-            <para>Se ha adoptado la licencia GNU GPL3</para>
-          </listItem>
-          <listItem>
-            <para>Todos los módulos han sido reorganizados</para>
-          </listItem>
-          <listItem>
-            <para>MCART ha sido rescrito, parcialmente bajo los conceptos de SOLID</para>
-          </listItem>
-        </list>
-      </content>
-    </section>
-    <section>
-      <title>Cambios en esta versión</title>
-      <content>
-        <list class="nobullet">
-          <listItem>
-            <para>Nuevo: El proyecto ahora es multiplataforma</para>
-          </listItem>
-          <listItem>
-            <para>Nuevo: Soporte para Mono Runtime</para>
-          </listItem>
-          <listItem>
-            <para>Nuevo: Soporte para .Net Standard (Core 2.0)</para>
-          </listItem>
-          <listItem>
-            <para>Nuevo: Soporte para Linux/macOs por medio de Mono Runtime</para>
-          </listItem>
-          <listItem>
-            <para>Nuevo: Librería de UI en gtk (incluye widgets y ventanas)</para>
-          </listItem>
-          <listItem>
-            <para>Nuevo: Librería de UI en Windows Forms (incluye controles y formularios)</para>
-          </listItem>
-          <listItem>
-            <para>Nuevo: Librería de UI en WPF (incluye controles y ventanas)</para>
-          </listItem>
-          <listItem>
-            <para>Nuevo: Proyectos de pruebas xUnit incluídos</para>
-          </listItem>
-          <listItem>
-            <para>Mejorado: Reescritura total de MCART</para>
-          </listItem>
-          <listItem>
-            <para>Quitado: MCADB</para>
-          </listItem>
-        </list>
-      </content>
-    </section>
-    <relatedTopics>
-      <link xlink:href="a43a94b2-1336-49d7-b56e-160b8ed4dd09"/>
-    </relatedTopics>
-  </developerConceptualDocument>
-</topic>
